# hep-physics

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  circle.yml  test_binaries
.circleci/: config.yml
examples/: BindingEnergies.cxx  CMakeLists.txt  ChronoExample.cxx  DataFrameExample.cxx  DataSeriesExample.cxx  DynamicArrayExample.cxx  EquationExample.cxx  GenKplusDec  GenKplusDec.cxx  IdealGas.cxx  LorentzVectors.cxx  Mass_on_Spring.cxx  PDFexample.cxx  ParticleGun.cxx  SUVAT_Example.cxx
html/: _array_8hxx_source.html  _atom_8cxx_source.html  _atom_8hxx_source.html  _b_l_a_h-example.html  _bc_dec_table_8hxx_source.html  _cauchy_p_d_f_8hxx_source.html  _classical_mechanics_8cxx_source.html  _classical_mechanics_8hxx_source.html  _common_compounds_8cxx_source.html  _common_compounds_8hxx_source.html  _common_isotopes_8hxx_source.html  _common_molecules_8cxx_source.html  _common_molecules_8hxx_source.html  _common_nuclei_8cxx_source.html  _common_nuclei_8hxx_source.html  _common_particles_8cxx_source.html  _common_particles_8hxx_source.html  _constants_8cxx_source.html  _constants_8hxx_source.html  _container_8hxx_source.html  _dagum_p_d_f_8hxx_source.html  _data_frame_8cxx_source.html  _data_frame_8hxx_source.html  _decay_table_8cxx_source.html  _decay_table_8hxx_source.html  _dynamic_array_8cxx_source.html  _dynamic_array_8hxx_source.html  _equation_solver_8cxx_source.html  _equation_solver_8hxx_source.html  _exponential_p_d_f_8hxx_source.html  _geometric_p_d_f_8hxx_source.html  _h_e_p_lorentz_vector_8hxx_source.html  _histogram_8hxx_source.html  _hydrocarbons_8cxx_source.html  _hydrocarbons_8hxx_source.html  _kplus_dec_table_8cxx_source.html  _kplus_dec_table_8hxx-example.html  _kplus_dec_table_8hxx_source.html  _lorentz_vector_8cxx_source.html  _lorentz_vector_8hxx_source.html  (+250 more)
include/: Array.hxx  Atom.hxx  BcDecTable.hxx  CauchyPDF.hxx  ClassicalMechanics.hxx  CommonCompounds.hxx  CommonMolecules.hxx  CommonNuclei.hxx  CommonParticles.hxx  Constants.hxx  Container.hxx  Correlation.hxx  DagumPDF.hxx  DataFrame.hxx  DataSeries.hxx  DecayTable.hxx  DynamicArray.hxx  Epoch.hxx  EquationSolver.hxx  ExponentialPDF.hxx  GeometricPDF.hxx  HEPLorentzVector.hxx  Histogram.hxx  Hydrocarbons.hxx  KplusDecTable.hxx  LorentzVector.hxx  NuclearPhysics.hxx  PDF.hxx  ParetoPDF.hxx  Particle.hxx  ParticleGun.hxx  Probability.hxx  RayleighPDF.hxx  Thermodynamics.hxx  Units.hxx  Vector.hxx
latex/: _b_l_a_h-example.tex  _kplus_dec_table_8hxx-example.tex  annotated.tex  bibTmpFile_1.bib  citelist.tex  class_decay.tex  class_decay_table.tex  class_h_e_p_1_1_decay.tex  class_h_e_p_1_1_decay__coll__graph.md5  class_h_e_p_1_1_decay_table.tex  class_h_e_p_1_1_decay_table__coll__graph.md5  class_h_e_p_1_1_isotope.tex  class_h_e_p_1_1_isotope__coll__graph.md5  class_h_e_p_1_1_isotope__inherit__graph.md5  class_h_e_p_1_1_lorentz_vector.tex  class_h_e_p_1_1_lorentz_vector__coll__graph.md5  class_h_e_p_1_1_nucleus.tex  class_h_e_p_1_1_nucleus__inherit__graph.md5  class_h_e_p_1_1_particle.tex  (+95 more)
tests/unit_tests/: CMakeLists.txt  TestEquation.cxx
(+112 files in other folders)
